--- a/games/Makefile
+++ b/games/Makefile
@@ -109,7 +109,7 @@ SUBDIR += linux-quake3-demo
 SUBDIR += linux-quake4
 SUBDIR += linux-quake4-demo
 SUBDIR += lskat
-SUBDIR += luanati
+SUBDIR += luanti
 SUBDIR += minetest_game
 SUBDIR += moon-buggy
 SUBDIR += nbsdgames
