--- a/x11-toolkits/Makefile
+++ b/x11-toolkits/Makefile
@@ -28,6 +28,7 @@
     SUBDIR += gtksourceview5
     SUBDIR += gtksourceviewmm3
     SUBDIR += irrlicht
+    SUBDIR += kddockwidgets
     SUBDIR += kf5-attica
     SUBDIR += kf5-kcompletion
     SUBDIR += kf5-kconfigwidgets
