--- a/devel/aws-c-io/Makefile
+++ b/devel/aws-c-io/Makefile
@@ -1,6 +1,6 @@
 PORTNAME=	aws-c-io
 DISTVERSIONPREFIX=	v
-DISTVERSION=	0.19.1
+DISTVERSION=	0.24.2
 CATEGORIES=	devel
 
 MAINTAINER=	ports@MidnightBSD.org
@@ -21,5 +21,7 @@ USE_LDCONFIG=	yes
 
 CMAKE_ON=	BUILD_SHARED_LIBS
 CMAKE_OFF=	BUILD_TESTING
+
+NO_TEST=	yes
 
 .include <bsd.port.mk>
