--- a/textproc/libdiff/Makefile
+++ b/textproc/libdiff/Makefile
@@ -1,16 +1,19 @@
 PORTNAME=	libdiff
 PORTVERSION=	0.1.0
+PORTREVISION=	1
 CATEGORIES=	textproc
 MASTER_SITES=	http://kristaps.bsd.lv/libdiff/snapshots/
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Library to generate arbitrary sequence diffs
+WWW=		https://github.com/kristapsdz/libdiff
 
 LICENSE=	mit
 
 PLIST_FILES=	lib/libdiff.a \
 		include/diff.h \
-		man/man3/diff.3.gz
+		share/man/man3/diff.3.gz
 HAS_CONFIGURE=	yes
+CONFIGURE_ARGS=	PREFIX="${PREFIX}" MANDIR="${PREFIX}/share/man"
 
 .include <bsd.port.mk>
