--- a/devel/py-msgpack/files/patch-pyproject.toml
+++ b/devel/py-msgpack/files/patch-pyproject.toml
@@ -1,9 +1,16 @@
---- pyproject.toml.orig	2024-09-09 16:59:04 UTC
+--- pyproject.toml.orig	2025-10-08 08:59:19 UTC
 +++ pyproject.toml
-@@ -1,5 +1,5 @@
+@@ -1,11 +1,11 @@
  [build-system]
--requires = ["setuptools >= 69.5.1"]
+-requires = ["setuptools >= 80.9.0"]
 +requires = ["setuptools >= 61"]
  build-backend = "setuptools.build_meta"
  
  [project]
+ name = "msgpack"
+ dynamic = ["version"]
+-license = "Apache-2.0"
++license = {text="Apache 2.0"}
+ authors = [{name="Inada Naoki", email="songofacandy@gmail.com"}]
+ description = "MessagePack serializer"
+ readme = "README.md"
