--- a/sysutils/bastille/Makefile
+++ b/sysutils/bastille/Makefile
@@ -1,6 +1,5 @@
 PORTNAME=	bastille
-DISTVERSION=	0.14.20250420
-PORTREVISION=	1
+DISTVERSION=	1.3.2.251225
 CATEGORIES=	sysutils
 
 MAINTAINER=	ports@MidnightBSD.org
@@ -15,7 +14,7 @@ FAKE_OPTS=	trueprefix
 RUN_DEPENDS+=	htop:sysutils/htop
 
 USE_GITHUB=	yes
-GH_ACCOUNT=	bastillebsd
+GH_ACCOUNT=	BastilleBSD
 
 NO_ARCH=	yes
 NO_BUILD=	yes
@@ -27,16 +26,16 @@ post-patch:
 		${WRKSRC}/usr/local/etc/rc.d/bastille
 
 do-install:
-	${INSTALL_SCRIPT} ${WRKSRC}/usr/local/bin/bastille ${STAGEDIR}${PREFIX}/bin
-	${INSTALL_SCRIPT} ${WRKSRC}/usr/local/etc/rc.d/bastille \
-		${STAGEDIR}${PREFIX}/etc/rc.d
-
-post-install:
 	${MKDIR} ${STAGEDIR}${ETCDIR}
 	${MKDIR} ${STAGEDIR}${DATADIR}
-	(cd ${WRKSRC}/${LOCALBASE}/${DATADIR_REL} && ${COPYTREE_SHARE} . ${STAGEDIR}${DATADIR})
-	${INSTALL_MAN} ${WRKSRC}/${TRUE_PREFIX}/man/man8/bastille.8.gz \
-		${STAGEDIR}${PREFIX}/share/man/man8/bastille.8.gz
-	${INSTALL_DATA} ${WRKSRC}/${LOCALBASE}/${ETCDIR_REL}/bastille.conf.sample ${ETCDIR}/bastille.conf.sample
+	${INSTALL_SCRIPT} ${WRKSRC}/usr/local/bin/bastille ${STAGEDIR}${PREFIX}/bin
+	${INSTALL_DATA} ${WRKSRC}/usr/local/etc/bastille/bastille.conf.sample \
+		${STAGEDIR}${ETCDIR}/${PORTNAME}.conf.sample
+	${INSTALL_SCRIPT} ${WRKSRC}/usr/local/etc/rc.d/bastille \
+		${STAGEDIR}${PREFIX}/etc/rc.d
+	(cd ${WRKSRC}/usr/local/share/bastille && \
+		${COPYTREE_SHARE} . ${STAGEDIR}${DATADIR})
+	(cd ${WRKSRC}/usr/local/share/man && \
+		${COPYTREE_SHARE} . ${STAGEDIR}${PREFIX}/share/man)
 
 .include <bsd.port.mk>
