--- a/ftp/curl/Makefile
+++ b/ftp/curl/Makefile
@@ -1,5 +1,5 @@
 PORTNAME=	curl
-PORTVERSION=	8.8.0
+PORTVERSION=	8.17.0
 CATEGORIES=	ftp net www
 MASTER_SITES=	https://curl.se/download/ \
 		https://github.com/curl/curl/releases/download/curl-${PORTVERSION:S|.|_|g}/
@@ -12,24 +12,25 @@ WWW=		https://curl.se/ \
 LICENSE=	mit
 LICENSE_FILE=	${WRKSRC}/COPYING
 
-CONFLICTS=	curl180
-
-USES=		cpe libtool localbase pathfix perl5 shebangfix tar:xz
+USES=		cpe libtool localbase:ldflags perl5 shebangfix tar:xz
 USE_PERL5=	build
 
-CONFIGURE_ARGS=	--disable-werror \
+CONFIGURE_ARGS=	--disable-unity \
+		--disable-werror \
 		--enable-dateparse \
 		--enable-dnsshuffle \
 		--enable-headers-api \
 		--enable-hsts \
 		--enable-http-auth \
+		--enable-manual \
 		--enable-mime \
 		--enable-netrc \
 		--enable-openssl-auto-load-config \
 		--enable-progress-meter \
+		--enable-ssls-export \
+		--with-ca-path=/etc/ssl/certs \
 		--with-zsh-functions-dir=${LOCALBASE}/share/zsh/site-functions \
 		--without-ca-bundle \
-		--without-ca-path \
 		--without-fish-functions-dir
 CONFIGURE_ENV=	LOCALBASE=${LOCALBASE} \
 		ac_cv_func_SSLv2_client_method=no
@@ -42,17 +43,19 @@ CPE_VENDOR=	haxx
 
 SHEBANG_FILES=	*/*.pl
 
-OPTIONS_DEFINE=	ALTSVC BROTLI COOKIES CURL_DEBUG DEBUG DOCS EXAMPLES IDN IPV6 LIBUV NTLM PROXY PSL STATIC TLS_SRP ZSTD
-OPTIONS_GROUP=	PROTOCOL
+OPTIONS_DEFINE=	ALTSVC COOKIES CURL_DEBUG DEBUG DOCS EXAMPLES IDN IPV6 LIBUV NTLM PROXY PSL STATIC TLS_SRP
+OPTIONS_GROUP=	COMPRESSION PROTOCOL
 OPTIONS_RADIO=	SSL
 OPTIONS_SINGLE=	GSSAPI RESOLV
-OPTIONS_GROUP_PROTOCOL=	DICT FTP GOPHER HTTP HTTP2 IMAP LDAP LDAPS LIBSSH LIBSSH2 MQTT POP3 RTSP SMB SMTP TELNET TFTP WEBSOCKET
+OPTIONS_GROUP_COMPRESSION=	BROTLI ZSTD
+OPTIONS_GROUP_PROTOCOL=	DICT FTP GOPHER HTTP HTTP2 IMAP IPFS LDAP LDAPS LIBSSH LIBSSH2 MQTT POP3 RTSP SMB SMTP TELNET TFTP WEBSOCKET
 OPTIONS_RADIO_SSL=	GNUTLS OPENSSL WOLFSSL
-OPTIONS_SINGLE_GSSAPI=	GSSAPI_BASE GSSAPI_HEIMDAL GSSAPI_MIT GSSAPI_NONE
+OPTIONS_SINGLE_GSSAPI=	GSSAPI_MIT GSSAPI_NONE # GSSAPI_BASE
 OPTIONS_SINGLE_RESOLV=	CARES THREADED_RESOLVER
-OPTIONS_DEFAULT=ALTSVC COOKIES GSSAPI_${${SSL_DEFAULT} == base :?BASE :NONE} DICT FTP GOPHER HTTP HTTP2 IMAP LIBSSH2 NTLM OPENSSL POP3 PROXY PSL RTSP SMTP STATIC TELNET TFTP THREADED_RESOLVER TLS_SRP
+OPTIONS_DEFAULT=ALTSVC BROTLI COOKIES GSSAPI_NONE DICT FTP GOPHER HTTP HTTP2 IDN IMAP IPFS LIBSSH2 MQTT NTLM OPENSSL POP3 PROXY PSL RTSP SMB SMTP STATIC TELNET TFTP THREADED_RESOLVER TLS_SRP WEBSOCKET ZSTD
 OPTIONS_SUB=	yes
 ALTSVC_DESC=	HTTP Alternative Services support
+COMPRESSION_DESC=	Compression methods
 COOKIES_DESC=	Cookies support
 CURL_DEBUG_DESC=cURL debug memory tracking
 DICT_DESC=	DICT (RFC 2229) support
@@ -60,14 +63,18 @@ HTTP_DESC=	HTTP/HTTPS support
 HTTP2_DESC=	HTTP/2 support (requires HTTP)
 HTTP2_IMPLIES=	HTTP
 IMAP_DESC=	IMAP/IMAPS support
+IPFS_DESC=	IPFS support
 LDAPS_IMPLIES=	LDAP
 LDAPS_DESC=	LDAP protocol over SSL support (requires GNUTLS/OPENSSL/WOLFSSL)
 LIBSSH_DESC=	SCP/SFTP support via libssh (requires OPENSSL)
 LIBSSH_IMPLIES=	OPENSSL
 LIBSSH2_DESC=	SCP/SFTP support via libssh2 (requires OPENSSL)
 LIBSSH2_IMPLIES=OPENSSL
+LIBUV_DESC=	Event-based tests
+LIBUV_IMPLIES=	DEBUG
 MQTT_DESC=	MQTT support
 POP3_DESC=	POP3/POP3S support
+PROTOCOL_DESC=	Transmission protocols
 PROXY_IMPLIES=	HTTP
 RESOLV_DESC=	DNS resolving options
 RTSP_IMPLIES=	HTTP
@@ -75,7 +82,6 @@ SMB_DESC=	SMB/CIFS support
 SMTP_DESC=	SMTP/SMTPS support
 THREADED_RESOLVER_DESC=	Threaded DNS resolver
 TLS_SRP_DESC=	TLS-SRP (Secure Remote Password) support
-WEBSOCKET_DESC=	WebSocket support (experimental)
 
 ALTSVC_CONFIGURE_ENABLE=alt-svc
 BROTLI_CONFIGURE_WITH=	brotli
@@ -88,21 +94,15 @@ CURL_DEBUG_CONFIGURE_ENABLE=	curldebug
 DEBUG_CONFIGURE_ENABLE=	debug
 DICT_CONFIGURE_ENABLE=	dict
 FTP_CONFIGURE_ENABLE=	ftp
-GNUTLS_CONFIGURE_ON=	--with-ca-fallback
 GNUTLS_CONFIGURE_WITH=	gnutls
 GNUTLS_LIB_DEPENDS=	libgnutls.so:security/gnutls \
 			libnettle.so:security/nettle
 GOPHER_CONFIGURE_ENABLE=gopher
-GSSAPI_BASE_CONFIGURE_ON=	--with-gssapi=${GSSAPIBASEDIR} ${GSSAPI_CONFIGURE_ARGS}
-GSSAPI_BASE_CPPFLAGS=	${GSSAPICPPFLAGS}
-GSSAPI_BASE_LDFLAGS=	${GSSAPILDFLAGS}
-GSSAPI_BASE_LIBS=	${GSSAPILIBS}
-GSSAPI_BASE_USES=	gssapi
-GSSAPI_HEIMDAL_CONFIGURE_ON=	--with-gssapi=${GSSAPIBASEDIR} ${GSSAPI_CONFIGURE_ARGS}
-GSSAPI_HEIMDAL_CPPFLAGS=${GSSAPICPPFLAGS}
-GSSAPI_HEIMDAL_LDFLAGS=	${GSSAPILDFLAGS}
-GSSAPI_HEIMDAL_LIBS=	${GSSAPILIBS}
-GSSAPI_HEIMDAL_USES=	gssapi:heimdal
+#GSSAPI_BASE_CONFIGURE_ON=	--with-gssapi=${GSSAPIBASEDIR} ${GSSAPI_CONFIGURE_ARGS}
+#GSSAPI_BASE_CPPFLAGS=	${GSSAPICPPFLAGS}
+#GSSAPI_BASE_LDFLAGS=	${GSSAPILDFLAGS}
+#GSSAPI_BASE_LIBS=	${GSSAPILIBS}
+#GSSAPI_BASE_USES=	gssapi
 GSSAPI_MIT_CONFIGURE_ON=--with-gssapi=${GSSAPIBASEDIR} ${GSSAPI_CONFIGURE_ARGS}
 GSSAPI_MIT_CPPFLAGS=	${GSSAPICPPFLAGS}
 GSSAPI_MIT_LDFLAGS=	${GSSAPILDFLAGS}
@@ -116,6 +116,7 @@ HTTP2_USES=		pkgconfig
 IDN_CONFIGURE_WITH=	libidn2
 IDN_LIB_DEPENDS=	libidn2.so:dns/libidn2
 IMAP_CONFIGURE_ENABLE=	imap
+IPFS_CONFIGURE_ENABLE=	ipfs
 IPV6_CONFIGURE_ENABLE=	ipv6
 LDAP_CONFIGURE_ENABLE=	ldap
 LDAP_USES=		ldap
@@ -128,11 +129,10 @@ LIBUV_CONFIGURE_WITH=	libuv
 LIBUV_LIB_DEPENDS=	libuv.so:devel/libuv
 MQTT_CONFIGURE_ENABLE=	mqtt
 NTLM_CONFIGURE_ENABLE=	ntlm
-OPENSSL_CONFIGURE_ON=	--with-ca-fallback
 OPENSSL_CONFIGURE_WITH=	openssl=${OPENSSLBASE}
 OPENSSL_CPPFLAGS=	-I${OPENSSLINC}
 OPENSSL_LDFLAGS=	-L${OPENSSLLIB}
-OPENSSL_USES=		ssl:build,run
+OPENSSL_USES=		ssl
 POP3_CONFIGURE_ENABLE=	pop3
 PROXY_CONFIGURE_ENABLE=	proxy
 PSL_CONFIGURE_WITH=	libpsl
@@ -143,7 +143,7 @@ SMTP_CONFIGURE_ENABLE=	smtp
 STATIC_CONFIGURE_ENABLE=static
 TELNET_CONFIGURE_ENABLE=telnet
 TFTP_CONFIGURE_ENABLE=	tftp
-THREADED_RESOLVER_CONFIGURE_ENABLE=	pthreads threaded-resolver
+THREADED_RESOLVER_CONFIGURE_ENABLE=	threaded-resolver
 TLS_SRP_CONFIGURE_ENABLE=	tls-srp
 WEBSOCKET_CONFIGURE_ENABLE=	websockets
 WOLFSSL_CONFIGURE_WITH=	wolfssl
@@ -167,12 +167,12 @@ post-install:
 
 post-install-DOCS-on:
 	${MKDIR} ${FAKE_DESTDIR}${DOCSDIR}/ ${FAKE_DESTDIR}${DOCSDIR}/internals/ ${FAKE_DESTDIR}${DOCSDIR}/libcurl/
-#	${INSTALL_DATA} ${WRKSRC}/docs/internals/*.md ${FAKE_DESTDIR}${DOCSDIR}/internals/
+	${INSTALL_DATA} ${WRKSRC}/docs/internals/*.md ${FAKE_DESTDIR}${DOCSDIR}/internals/
 	cd ${WRKSRC}/docs/ && ${INSTALL_DATA} FAQ INSTALL KNOWN_BUGS THANKS TODO options-in-versions *.md ${FAKE_DESTDIR}${DOCSDIR}/
 	cd ${WRKSRC}/docs/libcurl/ && ${INSTALL_DATA} ABI.md libcurl.m4 *.pl symbols-in-versions ${FAKE_DESTDIR}${DOCSDIR}/libcurl/
 
 post-install-EXAMPLES-on:
 	${MKDIR} ${FAKE_DESTDIR}${EXAMPLESDIR}/
-	cd ${WRKSRC}/docs/examples/ && ${INSTALL_DATA} Makefile.example Makefile.mk README.md *.c *.cpp ${FAKE_DESTDIR}${EXAMPLESDIR}/
+	cd ${WRKSRC}/docs/examples/ && ${INSTALL_DATA} Makefile.example README.md *.c *.cpp ${FAKE_DESTDIR}${EXAMPLESDIR}/
 
 .include <bsd.port.post.mk>
