--- a/sysutils/zrep/Makefile
+++ b/sysutils/zrep/Makefile
@@ -1,9 +1,9 @@
 PORTNAME=	zrep
-DISTVERSION=	2.0.2
 DISTVERSIONPREFIX=	v
+DISTVERSION=	2.0.2
 CATEGORIES=	sysutils
 
-MAINTAINER=	neel@neelc.org
+MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	ZFS based replication and failover solution
 WWW=		http://www.bolthole.com/solaris/zrep/
 
@@ -14,13 +14,16 @@ LICENSE_PERMS=	no-dist-mirror no-dist-sell no-pkg-mirror no-pkg-sell
 
 RUN_DEPENDS=	bash:shells/bash
 
+USES=		shebangfix
 USE_GITHUB=	yes
 GH_ACCOUNT=	bolthole
 
-PLIST_FILES=	bin/zrep
+SHEBANG_FILES=	${PORTNAME}
 
 NO_ARCH=	yes
 NO_BUILD=	yes
+
+PLIST_FILES=	bin/${PORTNAME}
 
 do-install:
 	${INSTALL_SCRIPT} ${WRKSRC}/${PORTNAME} ${STAGEDIR}/${PREFIX}/bin
