--- a/archivers/rpm4/Makefile
+++ b/archivers/rpm4/Makefile
@@ -1,69 +1,81 @@
 PORTNAME=	rpm
-PORTVERSION=	4.15.1
-PORTREVISION=	1
+PORTVERSION=	4.18.2
+PORTREVISION=	3
 CATEGORIES=	archivers
-MASTER_SITES=	http://ftp.rpm.org/releases/rpm-4.15.x/
+MASTER_SITES=	http://ftp.rpm.org/releases/rpm-${PORTVERSION:R}.x/
 PKGNAMESUFFIX=	4
 
 MAINTAINER=	ports@MidnightBSD.org
-COMMENT=	The RPM Package Manager
+COMMENT=	Red Hat Package Manager
+WWW=		https://rpm.org/
 
 LICENSE=	gpl2
 LICENSE_FILE=	${WRKSRC}/COPYING
 
-LIB_DEPENDS=	libpopt.so:devel/popt \
+BUILD_DEPENDS=	${LOCALBASE}/lib/libelf.so:devel/elfutils \
+		gsed:textproc/gsed
+LIB_DEPENDS=	libelf.so:devel/elfutils \
+		libgcrypt.so:security/libgcrypt \
 		libnss3.so:security/nss \
+		libpopt.so:devel/popt \
 		libzstd.so:archivers/zstd
-RUN_DEPENDS=	bash:shells/bash \
+RUN_DEPENDS=	${LOCALBASE}/lib/libelf.so:devel/elfutils \
+		bash:shells/bash \
 		gxargs:misc/findutils
 
-USES=		bdb compiler gmake iconv libarchive libtool \
-		lua:52+ pathfix pkgconfig shebangfix tar:bzip2
+FLAVORS=		default noopenmp
+FLAVOR?=		${FLAVORS:[1]}
+noopenmp_PKGNAMESUFFIX=	4-noopenmp
+
+USES=		cpe gmake iconv libarchive libtool lua pathfix pkgconfig \
+		readline shebangfix sqlite tar:bzip2
 USE_LDCONFIG=	yes
 
-GNU_CONFIGURE=	yes
-SHEBANG_FILES=	scripts/brp-python-bytecompile scripts/check-prereqs \
-		scripts/check-rpaths-worker scripts/pythondeps.sh \
-		scripts/pkgconfigdeps.sh scripts/fontconfig.prov \
-		scripts/rpmdb_loadcvt scripts/perl.prov scripts/perl.req  \
-		scripts/pythondistdeps.py scripts/find-lang.sh \
-		python/rpm/transaction.py
-CONFIGURE_ARGS=	--with-external-db \
-		--without-db \
-		--with-popt-prefix="${LOCALBASE}" \
-		--sysconfdir=${PREFIX}/etc \
-		--localstatedir=/var \
-		--without-javaglue \
-		am_cv_python_version=${PYTHON_VER}${PYTHON_ABIVER} \
-		ac_cv_lib_elf_gelf_getvernaux=no  # otherwise fails to build in presence of devel/elfutils
-CONFIGURE_ENV=	LUA_CFLAGS=-I${LUA_INCDIR} \
-		LUA_LIBS="-L${LUA_LIBDIR} -llua-${LUA_VER} -lm"
-INSTALL_TARGET=	install-strip
+SHEBANG_FILES=			scripts/brp-compress scripts/check-prereqs \
+				scripts/check-rpaths-worker \
+				scripts/find-lang.sh scripts/fontconfig.prov \
+				scripts/ocamldeps.sh scripts/perl.prov \
+				scripts/perl.req scripts/pkgconfigdeps.sh \
+				scripts/rpm_macros_provides.sh
+GNU_CONFIGURE=			yes
+GNU_CONFIGURE_MANPREFIX=	${PREFIX}/share
+CONFIGURE_ARGS=			--enable-bdb-ro \
+				--enable-sqlite=yes \
+				--localstatedir=/var \
+				--sysconfdir=${PREFIX}/etc \
+				--with-popt-prefix="${LOCALBASE}" \
+				--without-javaglue \
+				am_cv_python_version=${PYTHON_VER}${PYTHON_ABIVER}
+.if ${FLAVOR} == noopenmp
+CONFIGURE_ARGS+=		--disable-openmp
+.endif
+CONFIGURE_ENV=			LUA_CFLAGS=-I${LUA_INCDIR} \
+				LUA_LIBS="-L${LUA_LIBDIR} -llua-${LUA_VER} -lm"
+INSTALL_TARGET=			install-strip
 
-CPPFLAGS+=	-I${LOCALBASE}/include \
-		-I${LOCALBASE}/include/nspr -I${LOCALBASE}/include/nss/nss \
-		-I${BDB_INCLUDE_DIR} -I${LUA_INCDIR}
-LDFLAGS+=	-L${LOCALBASE}/lib -L${LOCALBASE}/lib/nss \
-		-L${BDB_LIB_DIR} -L${LUA_LIBDIR}
+CPPFLAGS+=	-I${LOCALBASE}/include -I${LOCALBASE}/include/nspr \
+		-I${LOCALBASE}/include/nss/nss -I${LUA_INCDIR}
+LDFLAGS+=	-L${LOCALBASE}/lib -L${LOCALBASE}/lib/nss -L${LUA_LIBDIR}
 
-PLIST_SUB=	VERSION=${PORTVERSION} \
-		OPSYS=${OPSYS:tl}
+CONFLICTS_INSTALL=	rpm2cpio rpm4 rpm4-noopenmp
 
-PORTDOCS=	*
+BINARY_ALIAS=	sed=${LOCALBASE}/bin/gsed
 
-OPTIONS_DEFINE=	PYTHON PLUGINS NLS DOCS
-OPTIONS_DEFAULT=PYTHON
-OPTIONS_SUB=	yes
+PLIST_SUB=	OPSYS=${OPSYS:tl} \
+		VERSION=${PORTVERSION}
 
-PYTHON_CONFIGURE_ENABLE=python
-PYTHON_USES=		python
+OPTIONS_DEFINE=		NLS PLUGINS PYTHON
+OPTIONS_DEFAULT=	PYTHON
+OPTIONS_SUB=		yes
 
-NLS_CONFIGURE_ENABLE=	nls
 NLS_USES=		gettext
+NLS_CONFIGURE_ENABLE=	nls
 NLS_LIBS=		-lintl
 
-PLUGINS_CONFIGURE_ENABLE=plugins
-PLUGINS_LIB_DEPENDS=	libdbus-1.so:devel/dbus
+PLUGINS_LIB_DEPENDS=		libdbus-1.so:devel/dbus
+PLUGINS_CONFIGURE_ENABLE=	plugins
+PYTHON_USES=			python
+PYTHON_CONFIGURE_ENABLE=	python
 
 post-patch:
 	${REINPLACE_CMD} -e 's:\.\./\.\./bin/::' ${WRKSRC}/Makefile.in
@@ -71,18 +83,5 @@ post-patch:
 		${WRKSRC}/misc/fts.?
 	${REINPLACE_CMD} -e 's/ __GLIBC__.*/& || defined(__MidnightBSD__)/' \
 		${WRKSRC}/system.h
-	@${REINPLACE_CMD} -e 's/\<xargs\>/gxargs/g' ${WRKSRC}/scripts/brp-python-bytecompile \
-		${WRKSRC}/scripts/brp-strip-static-archive \
-		${WRKSRC}/scripts/check-buildroot \
-		${WRKSRC}/scripts/check-rpaths \
-		${WRKSRC}/scripts/find-debuginfo.sh \
-		${WRKSRC}/scripts/vpkg-provides.sh
-
-post-install-PYTHON-off:
-	@${RM} ${STAGEDIR}${PREFIX}/lib/rpm/pythondistdeps.py
-
-post-install-DOCS-on:
-	@${MKDIR} ${STAGEDIR}${DOCSDIR}
-	cd ${WRKSRC}/doc && ${COPYTREE_SHARE} librpm/html ${STAGEDIR}${DOCSDIR}
 
 .include <bsd.port.mk>
