--- a/java/Makefile
+++ b/java/Makefile
@@ -62,7 +62,9 @@ SUBDIR += openjdk18
 SUBDIR += openjdk18-bin
 SUBDIR += openjdk19
 SUBDIR += openjdk20
+SUBDIR += openjdk21
 SUBDIR += openjdk21-bin
+SUBDIR += openjdk21-jre
 SUBDIR += openjdk24-bin
 SUBDIR += openjfx14
 SUBDIR += phpeclipse
