--- a/graphics/gpu-firmware-kmod/Makefile
+++ b/graphics/gpu-firmware-kmod/Makefile
@@ -1,5 +1,5 @@
 PORTNAME=	gpu-firmware-kmod
-PORTVERSION=	20241114
+PORTVERSION=	20250109
 PORTEPOCH=	1
 CATEGORIES=	graphics
 
@@ -53,12 +53,7 @@ RUN_DEPENDS=	gpu-firmware-radeon-kmod-aruba>0:graphics/gpu-firmware-radeon-kmod@
 		gpu-firmware-radeon-kmod-tahiti>0:graphics/gpu-firmware-radeon-kmod@tahiti \
 		gpu-firmware-radeon-kmod-turks>0:graphics/gpu-firmware-radeon-kmod@turks \
 		gpu-firmware-radeon-kmod-verde>0:graphics/gpu-firmware-radeon-kmod@verde \
-		gpu-firmware-amd-kmod-cyan-skillfish2>0:graphics/gpu-firmware-amd-kmod@cyan_skillfish2 \
-		gpu-firmware-amd-kmod-dimgrey-cavefish>0:graphics/gpu-firmware-amd-kmod@dimgrey_cavefish \
-		gpu-firmware-amd-kmod-green-sardine>0:graphics/gpu-firmware-amd-kmod@green_sardine \
-		gpu-firmware-amd-kmod-navy-flounder>0:graphics/gpu-firmware-amd-kmod@navy_flounder \
-		gpu-firmware-amd-kmod-sienna-cichlid>0:graphics/gpu-firmware-amd-kmod@sienna_cichlid \
-		gpu-firmware-amd-kmod-vangogh>0:graphics/gpu-firmware-amd-kmod@vangogh
+		gpu-firmware-amd-kmod-cyan-skillfish2>0:graphics/gpu-firmware-amd-kmod@cyan_skillfish2
 
 .include <bsd.port.pre.mk>
 
@@ -74,7 +69,8 @@ RUN_DEPENDS+=	gpu-firmware-intel-kmod-skylake>0:graphics/gpu-firmware-intel-kmod
 		gpu-firmware-intel-kmod-rocketlake>0:graphics/gpu-firmware-intel-kmod@rocketlake \
 		gpu-firmware-intel-kmod-dg1>0:graphics/gpu-firmware-intel-kmod@dg1 \
 		gpu-firmware-intel-kmod-dg2>0:graphics/gpu-firmware-intel-kmod@dg2 \
-		gpu-firmware-intel-kmod-alderlake>0:graphics/gpu-firmware-intel-kmod@alderlake
+		gpu-firmware-intel-kmod-alderlake>0:graphics/gpu-firmware-intel-kmod@alderlake \
+		gpu-firmware-intel-kmod-meteorlake>0:graphics/gpu-firmware-intel-kmod@meteorlake
 .endif
 
 .if ${ARCH} != powerpc64
@@ -118,6 +114,8 @@ RUN_DEPENDS+=	gpu-firmware-amd-kmod-aldebaran>0:graphics/gpu-firmware-amd-kmod@a
 		gpu-firmware-amd-kmod-dcn-3-1-6>0:graphics/gpu-firmware-amd-kmod@dcn_3_1_6 \
 		gpu-firmware-amd-kmod-dcn-3-2-0>0:graphics/gpu-firmware-amd-kmod@dcn_3_2_0 \
 		gpu-firmware-amd-kmod-dcn-3-2-1>0:graphics/gpu-firmware-amd-kmod@dcn_3_2_1 \
+		gpu-firmware-amd-kmod-dcn-3-5>0:graphics/gpu-firmware-amd-kmod@dcn_3_5 \
+		gpu-firmware-amd-kmod-gc-9-4-3>0:graphics/gpu-firmware-amd-kmod@gc_9_4_3 \
 		gpu-firmware-amd-kmod-gc-10-3-6>0:graphics/gpu-firmware-amd-kmod@gc_10_3_6 \
 		gpu-firmware-amd-kmod-gc-10-3-7>0:graphics/gpu-firmware-amd-kmod@gc_10_3_7 \
 		gpu-firmware-amd-kmod-gc-11-0-0>0:graphics/gpu-firmware-amd-kmod@gc_11_0_0 \
@@ -125,26 +123,35 @@ RUN_DEPENDS+=	gpu-firmware-amd-kmod-aldebaran>0:graphics/gpu-firmware-amd-kmod@a
 		gpu-firmware-amd-kmod-gc-11-0-2>0:graphics/gpu-firmware-amd-kmod@gc_11_0_2 \
 		gpu-firmware-amd-kmod-gc-11-0-3>0:graphics/gpu-firmware-amd-kmod@gc_11_0_3 \
 		gpu-firmware-amd-kmod-gc-11-0-4>0:graphics/gpu-firmware-amd-kmod@gc_11_0_4 \
+		gpu-firmware-amd-kmod-gc-11-5-0>0:graphics/gpu-firmware-amd-kmod@gc_11_5_0 \
 		gpu-firmware-amd-kmod-psp-13-0-0>0:graphics/gpu-firmware-amd-kmod@psp_13_0_0 \
 		gpu-firmware-amd-kmod-psp-13-0-4>0:graphics/gpu-firmware-amd-kmod@psp_13_0_4 \
 		gpu-firmware-amd-kmod-psp-13-0-5>0:graphics/gpu-firmware-amd-kmod@psp_13_0_5 \
+		gpu-firmware-amd-kmod-psp-13-0-6>0:graphics/gpu-firmware-amd-kmod@psp_13_0_6 \
 		gpu-firmware-amd-kmod-psp-13-0-7>0:graphics/gpu-firmware-amd-kmod@psp_13_0_7 \
 		gpu-firmware-amd-kmod-psp-13-0-8>0:graphics/gpu-firmware-amd-kmod@psp_13_0_8 \
 		gpu-firmware-amd-kmod-psp-13-0-10>0:graphics/gpu-firmware-amd-kmod@psp_13_0_10 \
 		gpu-firmware-amd-kmod-psp-13-0-11>0:graphics/gpu-firmware-amd-kmod@psp_13_0_11 \
+		gpu-firmware-amd-kmod-psp-14-0-0>0:graphics/gpu-firmware-amd-kmod@psp_14_0_0 \
+		gpu-firmware-amd-kmod-sdma-4-4-2>0:graphics/gpu-firmware-amd-kmod@sdma_4_4_2 \
 		gpu-firmware-amd-kmod-sdma-5-2-6>0:graphics/gpu-firmware-amd-kmod@sdma_5_2_6 \
 		gpu-firmware-amd-kmod-sdma-5-2-7>0:graphics/gpu-firmware-amd-kmod@sdma_5_2_7 \
 		gpu-firmware-amd-kmod-sdma-6-0-0>0:graphics/gpu-firmware-amd-kmod@sdma_6_0_0 \
 		gpu-firmware-amd-kmod-sdma-6-0-1>0:graphics/gpu-firmware-amd-kmod@sdma_6_0_1 \
 		gpu-firmware-amd-kmod-sdma-6-0-2>0:graphics/gpu-firmware-amd-kmod@sdma_6_0_2 \
 		gpu-firmware-amd-kmod-sdma-6-0-3>0:graphics/gpu-firmware-amd-kmod@sdma_6_0_3 \
+		gpu-firmware-amd-kmod-sdma-6-1-0>0:graphics/gpu-firmware-amd-kmod@sdma_6_1_0 \
 		gpu-firmware-amd-kmod-smu-13-0-0>0:graphics/gpu-firmware-amd-kmod@smu_13_0_0 \
+		gpu-firmware-amd-kmod-smu-13-0-6>0:graphics/gpu-firmware-amd-kmod@smu_13_0_6 \
 		gpu-firmware-amd-kmod-smu-13-0-7>0:graphics/gpu-firmware-amd-kmod@smu_13_0_7 \
 		gpu-firmware-amd-kmod-smu-13-0-10>0:graphics/gpu-firmware-amd-kmod@smu_13_0_10 \
+		gpu-firmware-amd-kmod-smu-14-0-2>0:graphics/gpu-firmware-amd-kmod@smu_14_0_2 \
 		gpu-firmware-amd-kmod-vcn-3-1-2>0:graphics/gpu-firmware-amd-kmod@vcn_3_1_2 \
 		gpu-firmware-amd-kmod-vcn-4-0-0>0:graphics/gpu-firmware-amd-kmod@vcn_4_0_0 \
 		gpu-firmware-amd-kmod-vcn-4-0-2>0:graphics/gpu-firmware-amd-kmod@vcn_4_0_2 \
-		gpu-firmware-amd-kmod-vcn-4-0-4>0:graphics/gpu-firmware-amd-kmod@vcn_4_0_4
+		gpu-firmware-amd-kmod-vcn-4-0-3>0:graphics/gpu-firmware-amd-kmod@vcn_4_0_3 \
+		gpu-firmware-amd-kmod-vcn-4-0-4>0:graphics/gpu-firmware-amd-kmod@vcn_4_0_4 \
+		gpu-firmware-amd-kmod-vcn-4-0-5>0:graphics/gpu-firmware-amd-kmod@vcn_4_0_5 
 .endif
 
 do-install:
