--- a/audio/linux-rl9-flac/Makefile
+++ b/audio/linux-rl9-flac/Makefile
@@ -9,6 +9,9 @@ MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Free lossless audio codec (Rocky Linux ${LINUX_DIST_VER})
 WWW=		https://www.xiph.org/flac/
 
+LICENSE=        bsd3 gpl2 gfdl lgpl2.1
+LICENSE_COMB=   multi
+
 USES=		cpe linux:rl9
 USE_LDCONFIG=	yes
 USE_LINUX=	libogg
