--- a/x11/linux-rl9-xcb-util/Makefile
+++ b/x11/linux-rl9-xcb-util/Makefile
@@ -8,6 +8,8 @@ MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	libxcb/libX11 extension/replacement libraries (Rocky Linux ${LINUX_DIST_VER})
 WWW=		https://xcb.freedesktop.org/
 
+LICENSE=	mit
+
 USES=		linux:rl9
 USE_LDCONFIG=	yes
 USE_LINUX=	xorglibs
