--- a/graphics/linux-rl9-wayland/Makefile
+++ b/graphics/linux-rl9-wayland/Makefile
@@ -8,6 +8,8 @@ MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Wayland compositor libraries (Rocky Linux ${LINUX_DIST_VER})
 WWW=		https://wayland.freedesktop.org/
 
+LICENSE=	mit
+
 USES=		cpe linux:rl9
 USE_LDCONFIG=	yes
 USE_LINUX_RPM=	yes
