--- a/graphics/linux-rl9-graphite2/Makefile
+++ b/graphics/linux-rl9-graphite2/Makefile
@@ -8,6 +8,9 @@ MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Rendering capabilities for complex non-Roman writing systems (Rocky Linux ${LINUX_DIST_VER})
 WWW=		https://graphite.sil.org
 
+LICENSE=        gpl2 lgpl2.1
+LICENSE_COMB=   dual
+
 USES=		cpe linux:rl9
 CPE_VENDOR=	sil
 USE_LDCONFIG=	yes
