--- a/print/linux-rl9-cups-libs/Makefile
+++ b/print/linux-rl9-cups-libs/Makefile
@@ -1,7 +1,7 @@
 PORTNAME=	cups
 PORTVERSION=	2.3.3
-DISTVERSIONSUFFIX=	op2-31.el9_5
-PORTREVISION=	6
+DISTVERSIONSUFFIX=	op2-34.el9_7
+PORTREVISION=	10
 CATEGORIES=	print linux
 PKGNAMESUFFIX=	-libs
 
@@ -9,9 +9,11 @@ MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Common UNIX Printing System libraries
 WWW=		https://github.com/OpenPrinting/cups
 
+LICENSE=        Apache-2.0
+
 USES=		cpe linux:rl9
 USE_LDCONFIG=	yes
-USE_LINUX=	avahi-libs gnutls libidn2
+USE_LINUX=	avahi-libs gnutls
 USE_LINUX_RPM=	yes
 WANT_LINUX32=	yes
 
