devel/hyprwayland-scanner: path issue

--- a/devel/hyprwayland-scanner/Makefile
+++ b/devel/hyprwayland-scanner/Makefile
@@ -27,7 +27,7 @@ PORTDOCS=	README.md
 OPTIONS_DEFINE=	DOCS
 
 do-install-DOCS-on:
-	@${MKDIR} ${FAKE_DESTDIRDIR}${DOCSDIR}
-	${INSTALL_MAN} ${PORTDOCS:S|^|${WRKSRC}/|} ${FAKE_DESTDIRDIR}${DOCSDIR}
+	@${MKDIR} ${FAKE_DESTDIR}${DOCSDIR}
+	${INSTALL_MAN} ${PORTDOCS:S|^|${WRKSRC}/|} ${FAKE_DESTDIR}${DOCSDIR}
 
 .include <bsd.port.mk>
