audio/libmusicbrainz5: update to work with newer libxml

--- a/audio/libmusicbrainz5/Makefile
+++ b/audio/libmusicbrainz5/Makefile
@@ -1,18 +1,20 @@
 PORTNAME=	libmusicbrainz
-PORTVERSION=	5.1.0
-PORTREVISION=	1
 DISTVERSIONPREFIX=	release-
+DISTVERSION=	5.1.0-41
+PORTREVISION=	1
+DISTVERSIONSUFFIX=	-g4655b57
 CATEGORIES=	audio
 PKGNAMESUFFIX=	5
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	MusicBrainz client library for audio metadata lookup
 
-LICENSE=	lgpl2.1
+LICENSE=	lgpl2.1+
+LICENSE_FILE=	${WRKSRC}/COPYING.txt
 
 LIB_DEPENDS=	libneon.so:www/neon
 
-USES=		cmake:insource compiler:c++11-lang gnome iconv:build pathfix
+USES=		cmake compiler:c++11-lang gnome iconv:build pkgconfig
 USE_GNOME=	libxml2
 USE_LDCONFIG=	yes
 
@@ -22,8 +24,8 @@ GH_ACCOUNT=	metabrainz
 post-patch:
 	${REINPLACE_CMD} -e 's|%%ICONV_PREFIX%%|${ICONV_PREFIX}|g' \
 		 ${WRKSRC}/src/CMakeLists.txt
+	${RM} ${WRKSRC}/cmake/modules/FindLibXml2.cmake
 	${REINPLACE_CMD} -e 's|/usr/local|${LOCALBASE}|g' \
 		 ${WRKSRC}/cmake/modules/*.cmake
-	${RM} ${WRKSRC}/cmake/modules/FindLibXml2.cmake
 
 .include <bsd.port.mk>
