add chamfer window manager

--- a/x11-wm/Makefile
+++ b/x11-wm/Makefile
@@ -4,6 +4,7 @@
     SUBDIR += awesome
     SUBDIR += blackbox
     SUBDIR += cage
+    SUBDIR += chamfer
     SUBDIR += compiz
     SUBDIR += compton
     SUBDIR += emwm
