x11-wm/blackbox: add libtool

--- a/x11-wm/blackbox/Makefile
+++ b/x11-wm/blackbox/Makefile
@@ -11,7 +11,7 @@ WWW=		https://blackboxwm.sourceforge.net/
 LICENSE=	mit
 LICENSE_FILE=	${WRKSRC}/LICENSE
 
-USES=		pathfix pkgconfig iconv xorg
+USES=		libtool pathfix pkgconfig iconv xorg
 USE_CXXSTD=	c++14
 USE_XORG=	x11 xft
 
