--- a/devel/Makefile
+++ b/devel/Makefile
@@ -874,6 +874,7 @@
     SUBDIR += p5-Module-Build-XSUtil
     SUBDIR += p5-Module-CPANTS-Analyse
     SUBDIR += p5-Module-CPANfile
+    SUBDIR += p5-Module-CoreList
     SUBDIR += p5-Module-ExtractUse
     SUBDIR += p5-Module-Find
     SUBDIR += p5-Module-Implementation
