ports-mgmt/magus-utils: add corelist

--- a/ports-mgmt/magus-utils/Makefile
+++ b/ports-mgmt/magus-utils/Makefile
@@ -1,5 +1,5 @@
 PORTNAME=	magus-utils
-PORTVERSION=	1.9
+PORTVERSION=	2.0
 CATEGORIES=	ports-mgmt
 MASTER_SITES=	# none
 DISTFILES=	# none
@@ -14,6 +14,7 @@ RUN_DEPENDS=	p5-DBD-Pg>=0:databases/p5-DBD-Pg \
 		p5-Class-DBI>=0:databases/p5-Class-DBI \
 		p5-Class-Accessor>=0:devel/p5-Class-Accessor \
 		p5-BSD-Resource>=0:devel/p5-BSD-Resource \
+		p5-Module-CoreList>=0:devel/p5-Module-CoreList \
 		git:devel/git
 
 USES=		perl5 pgsql:14
